# AoC2021

./: AoC2021.cabal
app/: Main.hs
src/: AoC.hs  Day1.hs  Day2.hs  Day3.hs  Helpers.hs
