cabal-version:      2.4
name:               AoC2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
data-dir: inputs
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  AoC

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.14.3.0
    other-modules: Helpers, Day1, Day2, Day3
    hs-source-dirs:   src
    default-language: Haskell2010
executable AoC2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        AoC2021

    other-modules: Paths_AoC2021
    hs-source-dirs:   app
    default-language: Haskell2010
